# ai-portfolio

./: .env.example  .gitignore  DEPLOY.md  README.md  ROADMAP.md  render.yaml
projects/baseplate/: .env.example  Dockerfile  README.md  eval-report.md  pyproject.toml  run.sh
projects/baseplate/deploy/argocd/: applicationset.yaml
projects/baseplate/deploy/github-actions/: golden-ci.yml
projects/baseplate/deploy/terraform/: main.tf
projects/baseplate/docs/: observability.md  platform.md
projects/baseplate/docs/spec/: development-plan.md  spec.md
projects/baseplate/src/baseplate/: __init__.py  api.py  catalog.py  demo.py  evaluate.py  ingest.py  llm.py  models.py  scaffold.py  slo.py  templates.py
projects/baseplate/tests/: test_api.py  test_ingest.py  test_live_smoke.py  test_llm.py  test_scaffold.py
projects/burnrate/: .env.example  Dockerfile  README.md  eval-report.md  pyproject.toml  run.sh
projects/burnrate/deploy/argocd/: application.yaml
projects/burnrate/deploy/github-actions/: deploy.yml
projects/burnrate/deploy/k8s/: deployment.yaml  prometheusrule.yaml
projects/burnrate/docs/: runbook.md
projects/burnrate/docs/spec/: spec.md
projects/burnrate/src/burnrate/: __init__.py  app.py  demo.py  evaluate.py  incident.py  metrics.py  service.py  slo.py  tasks.py
projects/burnrate/tests/: test_api.py  test_incident.py  test_live_smoke.py  test_llm.py  test_metrics.py  test_slo.py  test_tasks.py
projects/forecast/: Dockerfile  Makefile  README.md  pyproject.toml  run.sh
projects/forecast/deploy/argocd/: application.yaml
projects/forecast/deploy/k8s/: forecast.yaml
projects/forecast/docs/spec/: development-plan.md  spec.md
projects/forecast/src/forecast/: __init__.py  anomaly.py  api.py  forecast.py  llm_summary.py  methods.py  models.py  seasonality.py
projects/forecast/tests/: test_api.py  test_forecast.py  test_live_smoke.py
projects/llm-gateway/: .env.example  Dockerfile  README.md  eval-report.md  pyproject.toml  run.sh
projects/llm-gateway/docs/spec/: development-plan.md  spec.md
projects/llm-gateway/src/llm_gateway/: __init__.py  api.py  audit.py  data.py  demo.py  evaluate.py  firewall.py  gateway.py  llm.py  models.py  policy.py  redact.py
projects/llm-gateway/tests/: test_api.py  test_audit.py  test_firewall.py  test_gateway.py  test_live_smoke.py  test_redact.py
projects/maskline/: .env.example  Dockerfile  README.md  eval-report.md  pyproject.toml  run.sh
projects/maskline/docs/spec/: development-plan.md  spec.md
projects/maskline/src/maskline/: __init__.py  api.py  classify.py  controls.py  demo.py  evaluate.py  models.py  narrative.py  policy.py  risk.py  scan.py  warehouse.py
projects/maskline/tests/: test_api.py  test_classify.py  test_controls.py  test_live_smoke.py  test_llm.py  test_policy.py  test_warehouse.py
projects/multimodal-ocr/: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  run.sh
projects/multimodal-ocr/deploy/argocd/: application.yaml
projects/multimodal-ocr/deploy/k8s/: multimodal-ocr.yaml
projects/multimodal-ocr/docs/spec/: development-plan.md  spec.md
projects/multimodal-ocr/src/multimodal_ocr/: __init__.py  api.py  detect.py  llm_ner.py  models.py  ocr.py  pipeline.py
projects/multimodal-ocr/tests/: test_api.py  test_live_smoke.py  test_pipeline.py
projects/persona-twin/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  eval-report.md  pyproject.toml  run.sh
projects/persona-twin/data/eval/: questions.yaml
projects/persona-twin/deploy/: atlas-vector-index.json  cloudrun-service.yaml
projects/persona-twin/deploy/argocd/: application.yaml
projects/persona-twin/deploy/k8s/: observability.yaml  persona-twin.yaml
projects/persona-twin/docs/: atlas-setup.md  chunking-tradeoffs.md  data-governance.md  deployment.md  evaluation.md  free-models.md  observability.md  personas.md  reranking.md
projects/persona-twin/docs/spec/: development-plan.md  spec.md
projects/persona-twin/frontend/: package-lock.json  package.json  react-router.config.ts  tsconfig.json  vite.config.ts
projects/persona-twin/frontend/app/: app.css  root.tsx  routes.ts
projects/persona-twin/src/persona_twin/: __init__.py  cache.py  config.py  corpus.py  demo.py  log.py  models.py
projects/persona-twin/tests/: test_api.py  test_benchmark.py  test_breaker_and_embed.py  test_builder.py  test_cache.py  test_chat.py  test_chunking.py  test_config.py  test_corpus_and_ingest.py  test_custom_providers.py  test_embedding.py  test_eval.py  test_hybrid.py  test_interview.py  test_live_smoke.py  test_llm_routing.py  test_metrics.py  test_ollama.py  test_persona_prompting.py  test_query_rewrite.py  test_redaction.py  test_reranking.py  test_routing_policy.py  test_vectorstore.py
projects/pii-redactor/: Dockerfile  Makefile  README.md  pyproject.toml  run.sh
projects/pii-redactor/deploy/argocd/: application.yaml
projects/pii-redactor/deploy/k8s/: pii-redactor.yaml
projects/pii-redactor/docs/spec/: development-plan.md  spec.md
projects/pii-redactor/src/pii_redactor/: __init__.py  api.py  detect.py  llm.py  (+3 more)
projects/pii-redactor/tests/: test_api.py  test_detect.py  test_live_smoke.py  test_llm.py  test_redact.py
projects/postureline/: .env.example  Dockerfile  README.md  eval-report.md  pyproject.toml  run.sh
projects/postureline/tests/: test_api.py  test_controls.py  test_exposure.py  test_findings.py  test_live_smoke.py  test_llm.py  test_warehouse.py
projects/promptguard/: Dockerfile  Makefile  README.md  pyproject.toml  run.sh
projects/promptguard/tests/: test_api.py  test_live_smoke.py  test_scan.py
projects/rate-atlas/: .env.example  Dockerfile  LICENSE  README.md  eval-report.md  pyproject.toml  run.sh
projects/rate-atlas/docs/: deployment.md  observability.md
projects/rate-atlas/tests/: test_api.py  test_assist.py  test_live_smoke.py  test_llm.py  test_normalize.py  test_outliers.py  test_store.py
projects/reconcile/: Dockerfile  README.md  pyproject.toml  run.sh
projects/reconcile/tests/: test_api.py  test_extract.py  test_live_smoke.py  test_variance.py
(+654 files in other folders)
