[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "baseplate"
version = "0.1.0"
description = "The paved road: reusable IaC + golden CI/CD + GitOps + SLOs + a self-service service scaffolder a platform team provides to its org"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["src/baseplate"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 90
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
