[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "multimodal-ocr"
version = "0.1.0"
description = "OCR → PII detection → box-level redaction pipeline — API + UI"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.6"]
# Opt-in real OCR backend (needs the tesseract binary installed separately).
ocr = ["pytesseract>=0.3", "pillow>=10"]

[tool.hatch.build.targets.wheel]
packages = ["src/multimodal_ocr"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 90
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
