[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "persona-twin"
version = "0.7.0"
description = "Query AI digital twins of synthetic HEXACO personas, grounded in retrieved data with citations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "numpy>=1.26,<3",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
mongo = ["pymongo>=4.9,<5"]
openai = ["openai>=1.40,<3"]
anthropic = ["anthropic>=0.40,<2"]
redis = ["redis>=5.0,<7"]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<2",
    "httpx>=0.27,<1",
    "ruff>=0.5,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/persona_twin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
